--- a/style/typography/_headings.scss
+++ b/style/typography/_headings.scss
@@ -8,11 +8,22 @@ h1, h2, h3, h4, h5, h6,
 }
 
 h1 {
-	@include font-size(2.5);
+	@include font-size(2.2);
+	
+	@media screen and (min-width: breakpoint('tablet-landscape')) {
+		@include font-size(2.5);
+	}
 }
 
-h2 {
-	@include font-size(2.125);
+h2,
+.media-and-text h1,
+.is-style-split h1,
+.is-style-split-inverted h1 {
+	@include font-size(1.76);
+	
+	@media screen and (min-width: breakpoint('tablet-landscape')) {
+		@include font-size(2);
+	}
 }
 
 h3,
